tests/globals/valid/global.amu
s32 foo = 4;

s32 main() {
    return foo + 3;
}