tests/globals/invalid/variable_used_as_fun.amu
s32 foo = 3;

s32 main() {
    return foo();
}